# django-practice

./: pyproject.toml
config/settings/: base.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
