[tool.poetry]
name = "django-settings"
version = "0.1.0"
description = ""
authors = ["msm9401 <anstmdals94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_settings"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1"
django-environ = "^0.10.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
